--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,21 @@
 appdirs==1.4.4
 beautifulsoup4==4.12.2
-branca==0.6.0
 bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
-contourpy==1.0.7
 cssselect==1.2.0
-cycler==0.11.0
 fake-useragent==1.1.3
-folium==0.14.0
-fonttools==4.39.3
 idna==3.4
-importlib-metadata==6.3.0
-importlib-resources==5.12.0
-Jinja2==3.1.2
-kiwisolver==1.4.4
+importlib-metadata==6.6.0
 lxml==4.9.2
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-mysql-connector-python==8.0.32
-numpy==1.24.2
-packaging==23.1
+mysql-connector==2.2.9
 parse==1.19.0
-Pillow==9.5.0
-protobuf==3.20.3
 pyee==8.2.2
-pyparsing==3.0.9
 pyppeteer==1.0.2
 pyquery==2.0.0
-python-dateutil==2.8.2
-requests==2.28.2
+requests==2.30.0
 requests-html==0.10.0
-six==1.16.0
-soupsieve==2.4
+soupsieve==2.4.1
 tqdm==4.65.0
 urllib3==1.26.15
 w3lib==2.1.1
