--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ fake-useragent==1.1.3
 idna==3.4
 importlib-metadata==6.6.0
 lxml==4.9.2
-mysql-connector==2.2.9
+mysql-connector-python==8.0.33
 parse==1.19.0
+protobuf==3.20.3
 pyee==8.2.2
 pyppeteer==1.0.2
 pyquery==2.0.0
