--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 appdirs==1.4.4
 beautifulsoup4==4.12.2
+branca==0.6.0
 bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
 cssselect==1.2.0
 fake-useragent==1.1.3
+folium==0.14.0
 idna==3.4
 importlib-metadata==6.6.0
+Jinja2==3.1.2
 lxml==4.9.2
+MarkupSafe==2.1.2
 mysql-connector-python==8.0.33
+numpy==1.24.3
 parse==1.19.0
+plot-addresses @ git+https://github.com/cookster9/neighborhood-plotter.git@4739b4466dcd13c920ba3d877ef3dce5a379ca3e
 protobuf==3.20.3
 pyee==8.2.2
 pyppeteer==1.0.2
