reqs freeze all

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,15 +15,18 @@ MarkupSafe==2.1.2
 mysql-connector-python==8.0.33
 numpy==1.24.3
 parse==1.19.0
+pip==22.3.1
 protobuf==3.20.3
 pyee==8.2.2
 pyppeteer==1.0.2
 pyquery==2.0.0
 requests==2.30.0
 requests-html==0.10.0
+setuptools==65.6.3
 soupsieve==2.4.1
 tqdm==4.65.0
 urllib3==1.26.15
 w3lib==2.1.1
 websockets==10.4
+wheel==0.40.0
 zipp==3.15.0
