--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.4
 beautifulsoup4==4.12.2
+boto3==1.26.135
+botocore==1.29.135
 branca==0.6.0
 bs4==0.0.1
 certifi==2022.12.7
@@ -10,23 +12,24 @@ folium==0.14.0
 idna==3.4
 importlib-metadata==6.6.0
 Jinja2==3.1.2
+jmespath==1.0.1
 lxml==4.9.2
 MarkupSafe==2.1.2
 mysql-connector-python==8.0.33
 numpy==1.24.3
 parse==1.19.0
-pip==22.3.1
 protobuf==3.20.3
 pyee==8.2.2
 pyppeteer==1.0.2
 pyquery==2.0.0
+python-dateutil==2.8.2
 requests==2.30.0
 requests-html==0.10.0
-setuptools==65.6.3
+s3transfer==0.6.1
+six==1.16.0
 soupsieve==2.4.1
 tqdm==4.65.0
 urllib3==1.26.15
 w3lib==2.1.1
 websockets==10.4
-wheel==0.40.0
 zipp==3.15.0
